<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/dimen_16">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/resumo_pagamento"
        android:textColor="@color/blue_primary"
        android:textSize="@dimen/font_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pagamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        tools:itemCount="3"
        tools:listitem="@layout/item_escolher_prestacao" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/add_pagamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:padding="@dimen/dimen_16"
        android:text="@string/adicionar_pagamento"
        android:textAllCaps="true"
        android:textColor="@color/blue_tertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pagamento" />

    <View
        android:id="@+id/end_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_2"
        android:layout_marginTop="@dimen/dimen_16"
        android:background="@color/color_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_pagamento" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/pos_pagamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/pagamentos_apos_pagamento"
        android:textColor="@color/color_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/end_divider" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:text="@string/resumo_pagamento_cinco"
        android:textColor="@color/red_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pos_pagamento" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/finalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:background="@color/blue_tertiary"
        android:padding="@dimen/dimen_16"
        android:text="@string/finalizar"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valor" />

</androidx.constraintlayout.widget.ConstraintLayout>