<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icone"
        android:layout_width="@dimen/dimen_48"
        android:layout_height="@dimen/dimen_48"
        android:layout_marginTop="@dimen/dimen_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/icone"
        app:layout_constraintTop_toTopOf="@id/icone">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:textColor="@color/blue_primary"
            tools:text="@string/escolher_prestacao_item_valor_um" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:textAlignment="textEnd"
            android:textColor="@color/gray_primary"
            tools:text="@string/escolher_prestacao_item_data_um" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/descricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:maxLines="1"
        android:textColor="@color/blue_primary"
        app:layout_constraintBottom_toBottomOf="@+id/icone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/icone"
        tools:text="@string/escolher_prestacao_item_descricao_um" />

</androidx.constraintlayout.widget.ConstraintLayout>